# crewai-ollama

./: .env  README.md  pyproject.toml  pyvenv.cfg
output/: report.md
src/latest_ai_flow/: main.py  ui_app.py
src/latest_ai_flow/crews/content_crew/: content_crew.py  crew.jsonc
src/latest_ai_flow/crews/content_crew/agents/: researcher.jsonc
tests/: test_ui_app.py
